[package]
name = "pandora-rs2"
version = "0.1.0"
authors = ["Connor Perkins <cperkin4@gmu.edu>"]
edition = "2018"
description = "Updated version of pandora-rs"
license = "MIT"

[dependencies]
serde_json = "1.0.39"
serde_derive = "1.0.90"
serde = "1.0.90"
url = "1.7.2"
reqwest = "0.9.15"
rust-crypto = "0.2.36"
